package com.bluevortexflare.securevoip.users.connection.dto;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class ConnectionResponse {
    String message;
}
