package com.bluevortexflare.securevoip.users.register;

import com.bluevortexflare.securevoip.users.register.dto.RegisterRequest;
import com.bluevortexflare.securevoip.users.register.dto.RegisterResponse;

public interface UserRegisterService {
    RegisterResponse registerUser(RegisterRequest request);
}
