@startuml

title __SECUREVOIP's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      class com.bluevortexflare.securevoip.DebugController {
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      class com.bluevortexflare.securevoip.SecurevoipApplication {
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace communication {
        class com.bluevortexflare.securevoip.communication.BasicCommunicationForwarderService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace communication {
        interface com.bluevortexflare.securevoip.communication.CommunicationForwarderService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace exceptions {
        class com.bluevortexflare.securevoip.exceptions.ExceptionController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace exceptions {
        class com.bluevortexflare.securevoip.exceptions.VoiPRuntimeException {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.BasicUserSessionService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.SessionController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace session {
        interface com.bluevortexflare.securevoip.session.UserSessionService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace session {
        class com.bluevortexflare.securevoip.session.VoIPSession {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        class com.bluevortexflare.securevoip.users.UserController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          class com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          class com.bluevortexflare.securevoip.users.connection.SocketConfiguration {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          interface com.bluevortexflare.securevoip.users.connection.UserConnectionService {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace connection {
          namespace dto {
            class com.bluevortexflare.securevoip.users.connection.dto.ConnectionResponse {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          class com.bluevortexflare.securevoip.users.register.BasicUserRegisterService {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          interface com.bluevortexflare.securevoip.users.register.UserRegisterService {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          class com.bluevortexflare.securevoip.users.register.VoIPUser {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          class com.bluevortexflare.securevoip.users.register.WaitingRoomConfig {
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          namespace dto {
            class com.bluevortexflare.securevoip.users.register.dto.RegisterRequest {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace users {
        namespace register {
          namespace dto {
            class com.bluevortexflare.securevoip.users.register.dto.RegisterResponse {
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.bluevortexflare.securevoip {
      namespace waitingroom {
        class com.bluevortexflare.securevoip.waitingroom.WaitingRoomController {
        }
      }
    }
  }
  

  com.bluevortexflare.securevoip.communication.BasicCommunicationForwarderService .up.|> com.bluevortexflare.securevoip.communication.CommunicationForwarderService
  com.bluevortexflare.securevoip.communication.BasicCommunicationForwarderService o-- com.bluevortexflare.securevoip.session.UserSessionService : sessionService
  com.bluevortexflare.securevoip.session.BasicUserSessionService .up.|> com.bluevortexflare.securevoip.session.UserSessionService
  com.bluevortexflare.securevoip.session.SessionController o-- com.bluevortexflare.securevoip.users.connection.UserConnectionService : connectionService
  com.bluevortexflare.securevoip.session.VoIPSession o-- com.bluevortexflare.securevoip.users.register.VoIPUser : initiator
  com.bluevortexflare.securevoip.session.VoIPSession o-- com.bluevortexflare.securevoip.users.register.VoIPUser : responder
  com.bluevortexflare.securevoip.users.UserController o-- com.bluevortexflare.securevoip.users.register.UserRegisterService : registerService
  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService .up.|> com.bluevortexflare.securevoip.users.connection.UserConnectionService
  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService o-- com.bluevortexflare.securevoip.communication.CommunicationForwarderService : forwarderService
  com.bluevortexflare.securevoip.users.connection.BasicUserConnectionService o-- com.bluevortexflare.securevoip.session.UserSessionService : sessionService
  com.bluevortexflare.securevoip.users.register.BasicUserRegisterService .up.|> com.bluevortexflare.securevoip.users.register.UserRegisterService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
